stop the checkboxes from jumping

--- a/Style1.css
+++ b/Style1.css
@@ -62,6 +62,7 @@ label {
   display: block;
   border-radius: 6px;
   background-color: rgb(240, 240, 240);
+  border: solid 3px rgb(240, 240, 240);
   width: 95%;
   padding-left: 20px !important;
   padding-top: 5px !important;
@@ -81,6 +82,7 @@ label {
 
 label:hover {
   background-color: rgb(230, 230, 230);
+  border: solid 3px rgb(230, 230, 230);
 }
 
 /* select all textareas immediately before a label*/
